Bug 146258 - Labels synchronisation does not sync all formatting (spacing above paragraph)
Summary: Labels synchronisation does not sync all formatting (spacing above paragraph)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.1 target:7.5.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Labels-BusinessCards
  Show dependency treegraph
 
Reported: 2021-12-16 11:07 UTC by Peter Smith
Modified: 2023-12-10 10:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file created per instructions (40.47 KB, application/vnd.oasis.opendocument.text)
2023-05-10 21:55 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Smith 2021-12-16 11:07:15 UTC
Before printing labels from a database I add space above and to the left of the text so they don't print over the label edges. I do this using:
> Select all rows (in top lhs label) > Paragraph > Indents and Spacing > Indent > Before text > {set value}
> Select top row (in top lhs label) > Paragraph > Indents and Spacing > Spacing > Above paragraph > {set value}
On selecting the 'Synchronise Labels' button the indent (and all other formatting) synchronise, but the Spacing Above does not.  I have also tried:
Tools > Update > Update All 
With the same results
I first noticed this in v 7.2.2.2 (x64) and reconfirmed in 7.2.4.1 (x64).
I also tried inserting a blank row above the top row and inserting space above the top text row.  Synchronise worked OK, but when I then deleted the top blank row and re-synchronised, the spacing above was again lost (on all but the top lhs label)
It is I believe a new bug since last December (2020) as I use the same process each year.

Background info:
I create my labels from:
- an address list in MS Outlook
- export to csv (Windows)
- open with LO calc and save as ods
- Create new LO database and register the ods spreadsheet
> File > New > Labels then select the Database, Table and fields
Comment 1 Buovjaga 2022-12-25 16:05:04 UTC
(In reply to Peter Smith from comment #0)
> Before printing labels from a database I add space above and to the left of
> the text so they don't print over the label edges. I do this using:
> > Select all rows (in top lhs label) > Paragraph > Indents and Spacing > Indent > Before text > {set value}
> > Select top row (in top lhs label) > Paragraph > Indents and Spacing > Spacing > Above 

How can I do these "Select all rows (in top lhs label)" and "Select top row (in top lhs label)"? I don't understand what these mean.

Do you still see the problem?

Set to NEEDINFO.
Change back to UNCONFIRMED, if the problem persists. Change to RESOLVED WORKSFORME, if the problem went away.
Comment 2 Peter Smith 2022-12-26 12:38:21 UTC
I'm on v 7.3.2.2 and I confirm that the bug still exists.

My process to produce my labels is:
1. Export address data to a *.csv file and save that as LibreOffice *.ods
2. Use the LibreOffice Database Wizard to create a database by registering the above spreadsheet
3. From the created database File > New > Labels
4. This creates a labels template sheet comprises two columns of labels, each of which is of the format:

<First Name> <Last Name>
<Home Street>
<Home City>
<Home State>
<Home Postal Code>
<Home Country>

In the top lh label I select all the above lines and indent by 0.3 cm (using Format > Paragraph > Indent).  I then select just the top line (ie <First Name> <Last Name>) and add 0.2cm above using Format > Paragraph > Spacing Above Paragraph.

When I then click the 'Synchronise Labels' button the indent is synchronised but the Spacing above is not.
Comment 3 Buovjaga 2022-12-26 13:06:45 UTC
Thanks, now I could reproduce. I used the bibliography database that comes with every LibreOffice. Notes:

<Bibliography.biblio.0.Booktitle>
<Bibliography.biblio.0.Author>

Brand: A4
Type: J8359 Address

Options - Synchronize Contents

For the Spacing Above Paragraph, I did Format - Paragraph immediately, no need to even select anything.

Bibisected with linux-64-7.0 to
https://git.libreoffice.org/core/commit/166b5010b402a41b192b1659093a25acf9065fd9
tdf#130685 sw_redlinehide: fix copying to position following redline

Searching the bug tracker with that commit hash shows it has affected mail merge in various ways, so it seems plausible to affect this synching as well.
Comment 4 Gabor Kelemen (Collabora) 2023-05-10 21:55:44 UTC
Created attachment 187192 [details]
Example file created per instructions

If this is opened in 6.4, all labels have 0.6 cm Spacing above the first paragraph - changing that and pressing Syncronize labels applies the change to all labels.
But not in 7.0 and newer.
Comment 5 Commit Notification 2023-07-19 09:39:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b68a6d6ce18a611873c166e72a97930812bfbbc0

tdf#146258 sw: commit 34b607bb455bd30d3adf8e3f72182c7cc4d062ee

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2023-07-19 09:47:07 UTC
fixed on master
Comment 7 Commit Notification 2023-07-27 13:25:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/55a8eec99f6c709705a50518980c2bcb02cfcfc5

tdf#146258 sw: invalidate section frame for new text frame at start

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-07-27 13:26:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/b81829dc7aa94e92818d2545cd28f1ef6c298395

tdf#146258 sw: invalidate section frame for new text frame at start

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Peter Smith 2023-12-10 10:09:50 UTC
I've just used the same procedure in v.7.6.2.1 and the sync worked perfectly so this bug is fixed.  Many thanks.